  - Improved content rendering to hide Edit/Delete links according to permissions. 
  - Update to php timezonedb rather than by static seed values insert into DB, inc:  
    Deprecation of the lib/Doctrine/entities/Timezone.php entity. 
  - Specify downtime dates in site's local timezone with conversion to utc 
    Removal of extraneous date_default_timezone_set("UTC") calls (legacy artefact) 
  - BugFix - get_service method was ignoring the `monitored` url parameter. 
  - BugFix - limit to reachable sites when adding downtimes 
    
    

GOCDB-5.3.1 Release (16/02/2015) 
  - Addition of static GocContextPath.php to allow deployment of GOCDB in other 
    environments such as a Symfony component (allows web assets to be located 
    in a different directory as required by environment).
  - Addition of static SecurityContextSource.php as a storage object for external 
    security context objects that may be set to authenticate users in other 
    environments such as a a Symfony component. 
  - Major improvements to Authentication package to enable different auth schemes. 
  - Support for SAML2.0 SSO logins using SimpleSamlPhp (disabled by default).  
  - Update DB entity model to add new value (User->$username1) and new script 
    (QueryPopulateSSO_UsernameRunner.php) to query the EGI Idp to populdate this value. 
  - Update of get_user PI method (GetUser.php): 
    - ENTITY_TYPE element values updated ( 'group' value is separated into 'ngi' and 'project')
    - New elements: SSOUSERNAME and PRIMARY_KEY (PK of the target role entity). 
  - xecho() and xssafe() methods added in view layer to add extra protection against XSS attacks. 
  - Throw early exceptions if PK/ID values _REQUEST are not numeric. 
  - Prototyped new regex for extensions expression parsing to allow escaped chars including 
      escaped parenthesis (not implemented yet).   
  

GOCDB-5.3 Release (5 Nov 2014) 