@@ -14,6 +14,7 @@ compiledEntities/
 composer.phar
 composer.bat
 composer
+gocdb.log
 
 # Eclipse: https://github.com/github/gitignore/blob/master/Global/Eclipse.gitignore
 # =====================
