@@ -14,8 +14,16 @@
  */
 
 namespace org\gocdb\security\authentication;
+//use Monolog\Logger;
+//use Monolog\Handler\StreamHandler;
 
+
+// include all the Authentication packages classes 
 include_once __DIR__ . '/_autoload.php';
+
+// Load Monolog classes, this autoload may have been required 
+// previously in other packages, hence we require_once rather than include_once 
+//require_once  __DIR__."/../../vendor/autoload.php";
 
 /**
  * Singleton to create and serve one or more <code>IFirewallComponent</code>
@@ -28,9 +36,16 @@ class FirewallComponentManager {
 
     private $firewallComponents;
     static $_instance;
+    /** @var \Psr\Log\LoggerInterface logger */
+    //private $logger; 
 
     private function __construct() {
-        //echo 'is only called once';
+        // create logger 
+//        $this->logger = new Logger('authPackageLogger');
+//        $this->logger->pushHandler(new StreamHandler(__DIR__.'/../../gocdb.log', Logger::DEBUG));
+//        //$log1->pushHandler(new FirePHPHandler());
+//        $this->logger->addDebug('authPackageLogger is now ready');
+        
         $this->firewallComponents = array();
         $this->createFwC1(); 
         //$this->createFwC2();  // create/add as many FirewallComponentS as needed  
@@ -43,14 +58,17 @@ class FirewallComponentManager {
         $myAuthManager = new MyAuthenticationManager();
         
         // set dependencies 
+        //$mySecurityContext->setLogger($this->logger); 
         $mySecurityContext->setAuthManager($myAuthManager);
         $mySecurityContext->setConfigFirewallComponent($myConfig1);
         // set dependencies 
+        //$myAuthManager->setLogger($this->logger); 
         $myAuthManager->setSecurityContext($mySecurityContext);
         $myAuthManager->setConfigFirewallComponent($myConfig1);
         
         // create FirewallComponent and add to our singleton array  
         $fwComponent1 = new FirewallComponent($myAuthManager, $mySecurityContext, $myConfig1);
+        //$fwComponent1->setLogger($this->logger); 
         $this->firewallComponents['fwC1'] = $fwComponent1;
     }
 
