@@ -1,0 +1,12 @@
+
+Select all sites that have a legacy timezone value. 
+
+```sql
+select site.id, site.email, site.shortname, tz.name
+from sites site
+inner join timezones tz on site.timezone_id = tz.id
+where 
+(tz.name like 'Etc/%' or tz.name = 'CET' or tz.name = 'GMT' or tz.name='Israel' 
+or tz.name = 'Japan' or tz.name='NZ' or tz.name='PRC' or tz.name='Poland'
+or tz.name='Singapore' or tz.name='Turkey'); 
+```
